# rolauncher

./: .gitignore  LICENSE  README.md  index.html  installer.iss  main.spec  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
backend/: README.md  main.py  updater.py
backend/api/: __init__.py  assets.py  badges.py  client.py  groups.py  places.py  plugins.py  presence.py  realtime.py  thumbnails.py  universes.py  users.py
backend/api/bases/: baseplace.py  baseuser.py
backend/api/utilities/: iterators.py  requests.py
backend/mapping/: auth.py  database.py  friends.py  games.py  realtime.py  user.py  utility.py
frontend/: App.css  App.tsx  index.tsx  types.d.ts
frontend/components/: AvatarRenderer.tsx  Button.tsx  FriendCard.tsx  GameCard.tsx  LazyImage.tsx  Pagination.tsx  TransImage.tsx  Utils.ts
frontend/components/icons/: AddFriendIcon.tsx  BellIcon.tsx  DotsIcon.tsx  FavoriteIcon.tsx  LikeIcon.tsx  MinusIcon.tsx  OpenIcon.tsx  PlayCircleIcon.tsx  PlayIcon.tsx  SearchIcon.tsx  ServerIcon.tsx  SettingsIcon.tsx  ShortcutIcon.tsx  UserInfoIcon.tsx  UsersIcon.tsx  WrenchIcon.tsx  XIcon.tsx
frontend/layouts/: AccountsModal.tsx  HomeLayout.tsx  SearchModal.tsx  ShortcutModal.tsx  UserModal.tsx
frontend/stores/: NavStore.ts  SearchStore.ts  UserStore.ts
frontend/utils/: NumberFmt.ts
frontend/views/: Friends.tsx  Game.tsx  Home.tsx  Login.tsx  Profile.tsx  Search.tsx
